# donorpipe

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  MILESTONES.md  PROJECT.md  config.json  dl_test_config.json  docker-compose.prod.yml  docker-compose.yml  prod_config.json  pyproject.toml  realfiles_config.json  staging_config.json
.claude/: settings.local.json
docs/: COMPLETED_MILESTONES.md  OPERATIONS.md  SCRATCH.md  help.md  list_views.md  manual_data_updates.md  paypal_downloading.md  qbo_downloading.md  relationship_form.md  relationships.md  webui_spec.md
frontend/: README.md  index.html  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/scripts/: fetch_graph.ts
frontend/src/: App.tsx  main.tsx
frontend/tests/: dateRange.test.ts  graph.test.ts  matching.test.ts
nginx/: Dockerfile  nginx.conf  nginx.prod.conf
scripts/: README.md  build_graphs.sh  deploy-all.sh  deploy.sh  dev.sh  download_tests.sh  fetch_graph.py  generate_graph_json.py  hash_password.py  logs.sh  provision-pi-warehouse.sh  provision.sh  push-config.sh  push-help.sh  refresh.sh  restart.sh  sanitize_csv.py  sync-data.sh  sync-test-data.sh  update-warehouse-pi.sh  uvicorn_log_config.json
src/donorpipe/: __init__.py  datewindow.py
testdata/Benevity/: Benevity August 2023 Download.csv  Benevity_DonationReport_G3XA2QUEAP_20250611.csv  Benevity_test-2.csv
testdata/Chase/: chase_2025.csv  chase_2026.csv
testdata/DonorBox/: donorbox_2023.csv  donorbox_2024.csv  donorbox_2025.csv  donorbox_2026.csv
testdata/Paypal/: paypal_all_22Jul2023.csv
testdata/QBO/: QBO_from_2023.csv
testdata/Stripe/: stripe_2023.csv  stripe_2024.csv  stripe_2025.csv  stripe_2026.csv  stripe_all_1Dec2024_2Jul2025.csv
tests/: __init__.py  conftest.py
warehouse/: WAREHOUSE.md  download.sh  poll_refresh.sh  refresh.sh  sanitize.sh  should_rebuild.py  sync-data.sh  sync-graphs.sh  update.sh  warehouse_config.json  warehouse_pi_config.json
(+75 files in other folders)
